# gitxtend

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
docs/: API.md  DESIGN.md  PORTING.md  ROADMAP.md
python/gitxtend/: __init__.py  __init__.pyi
python/tests/: conftest.py  test_e2e.py  test_mock_fixture.py
src/: error.rs  lib.rs  python.rs  repo.rs  status.rs
src/repo/: add.rs  ahead_behind.rs  commit.rs  current_branch.rs  fetch.rs  head_sha.rs  is_clean.rs  is_git_repo.rs  last_commit_date.rs  log_subjects.rs  mod.rs  pull.rs  push.rs  remote_head_sha.rs  remote_urls.rs  rev_list_count.rs  status_counts.rs  tracking_branch.rs
