[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "gitxtend"
version = "0.1.0"
description = "gitoxide-backed git repository tending, exposed to Python via PyO3"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Shawn Hartsock" }]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/hartsock/gitxtend"

[tool.maturin]
# Compiled module imported as `import gitxtend`. Type stubs in python/gitxtend.
# `extension-module` is a crate feature that layers on `python` (which pulls
# pyo3); see Cargo.toml [features]. A plain `cargo test` enables neither, so the
# pure-Rust core stays interpreter-free.
features = ["extension-module"]
python-source = "python"
module-name = "gitxtend._gitxtend"
